Fix alignment of hero and header

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     font-weight: 700;
     color: #f9faf8;
     padding: 0 120px;
+
 }
 
 .menu {
@@ -33,11 +34,13 @@ body {
 a {
     color: #e5e7eb;
     text-decoration: none;
+    min-width: 200px;
 }
 
 .hero {
     display: flex;
     padding: 60px 120px;
+    color: #e5e7eb;
     justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
@@ -53,7 +56,7 @@ a {
 .hero p {
     margin: 0;
     margin-bottom: 8px;
-    max-width: 700px;
+    max-width: 580px;
 }
 
 .hero button {
@@ -69,7 +72,6 @@ a {
 
 .hero-left {
     flex-shrink: 1;
-    padding: 20px;
     color: #e5e7eb;
 }
 
@@ -77,7 +79,7 @@ img {
     height: auto;
     width: 350px;
     flex: 1 1 0;    
-    padding: 60px;
+    margin-left: 60px;
 }
 
 .information-gallery {
